# popcorn-kernel

./: .clang-format  .cocciconfig  .config-qemu-arm64  .config-qemu-ppc64le  .config-qemu-x86_64  .get_maintainer.ignore  .gitattributes  .gitignore  .mailmap  MAINTAINERS  Makefile  README.md  basic  bt.W.x  inputbt.data  lib.diff  mt  stack-arm  tatshqqqqqqq:q  update_config.sh
ZxOS/list_kernel_arm64/read_write_arm64/: CMakeLists.txt
ZxOS/list_kernel_arm64/read_write_arm64/build_final_working_parsec/: build.ninja  compile_commands.json
ZxOS/list_kernel_arm64/read_write_arm64/build_final_working_parsec/modules/libmetal/: cmake_install.cmake
ZxOS/list_kernel_arm64/read_write_arm64/build_final_working_parsec/modules/nanopb/: cmake_install.cmake
ZxOS/list_kernel_arm64/read_write_arm64/build_final_working_parsec/modules/openisa/: cmake_install.cmake
ZxOS/list_kernel_arm64/read_write_arm64/build_final_working_parsec/modules/st/: cmake_install.cmake
ZxOS/list_kernel_arm64/read_write_arm64/build_final_working_parsec/modules/zscilib/: cmake_install.cmake
ZxOS/list_kernel_arm64/read_write_arm64/build_final_working_parsec/zephyr/: edt.pickle  zephyr.stat
ZxOS/list_kernel_arm64/read_write_arm64/build_final_working_parsec/zephyr/drivers/usb/: cmake_install.cmake
ZxOS/list_kernel_arm64/read_write_arm64/build_final_working_parsec/zephyr/kernel/: cmake_install.cmake
ZxOS/list_kernel_arm64/read_write_arm64/src/: app.c
ZxOS/red_black_tree_x86_backup_not_working/: CMakeLists.txt
ZxOS/red_black_tree_x86_backup_not_working/src/: ep.c  list.h_  mymalloc.c  rbtree.h
(+1103 files in other folders)
